Added Posts Style Updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="{{ page.description }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/atom.xml" rel="alternate" title="Drew Franklin Geeks Out">
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/css/main.css?v=1.0">
 
 	<script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 	<script>
