--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -243,7 +243,8 @@ header[role="banner"] nav {
 	color: #888;
 	text-decoration: none;
 	font-size: 1.25em;
-	margin-left: 0.5em;
+	margin-left: 0.3em;
+	margin-right: 0.3em;
 }
 
 .site-links a.active:link,
