--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,155 +5,156 @@ $secondary-color: #e8f7f0;
 $accent-color: #2a4036;
 
 html {
-	font-family: $font-serif;
-	font-size: 100%;
-	line-height: 1.125em;
-	color: rgb(34, 34, 34);
-	background: #e8f7f0; /* Old browsers #c1d1ca */
-	background: -moz-linear-gradient(-20deg, #bcc4c1 0%, #e8f7f0 40%, #e8f7f0 100%);
-	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#bcc4c1), color-stop(40%,#e8f7f0), color-stop(100%,#e8f7f0));
-	background: -webkit-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
-	background: -o-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
-	background: -ms-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
-	background: linear-gradient(160deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
+  font-family: $font-serif;
+  font-size: 100%;
+  line-height: 1.125em;
+  color: rgb(34, 34, 34);
+  background: #e8f7f0; /* Old browsers #c1d1ca */
+  background: -moz-linear-gradient(-20deg, #bcc4c1 0%, #e8f7f0 40%, #e8f7f0 100%);
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#bcc4c1), color-stop(40%,#e8f7f0), color-stop(100%,#e8f7f0));
+  background: -webkit-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
+  background: -o-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
+  background: -ms-linear-gradient(-20deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
+  background: linear-gradient(160deg, #bcc4c1 0%,#e8f7f0 40%,#e8f7f0 100%);
 }
 body {
-	background: #fff;
-	background: rgba(255,255,255,.7);
-	-webkit-box-shadow: 0px 0px 2px 0px #999;
-	-moz-box-shadow: 0px 0px 2px 0px #999;
-	box-shadow: 0px 0px 2px 0px #999;
-	margin: 0.75em 0;
-	padding-bottom: 0.5em
+  background: #fff;
+  background: rgba(255,255,255,.7);
+  -webkit-box-shadow: 0px 0px 2px 0px #999;
+  -moz-box-shadow: 0px 0px 2px 0px #999;
+  box-shadow: 0px 0px 2px 0px #999;
+  margin: 0.75em 0;
+  padding-bottom: 0.5em
 }
 
 /* LINKS */
 a {
-	font-weight: bold;
-	color: rgb(34, 34, 34);
-	color: rgba(34, 34, 34, .9);
+  font-weight: bold;
+  color: rgb(34, 34, 34);
+  color: rgba(34, 34, 34, .9);
+
+  :hover {
+    color: rgba(34, 34, 34, .7);
+    text-decoration: underline;
+  }
 }
 
-a:hover {
-	color: rgba(34, 34, 34, .7);
-	text-decoration: underline;
-}
 
 article {
-	padding-top: 1em;
-	padding-bottom: 2em;
-		max-width: 75em;
-	margin: 0 auto;
-}
-article .content {
-	padding-left: 15px;
-	padding-right: 15px;
-}
-article footer {
-	margin-top: 1em;
-	text-decoration: none;
-	color: #888;
-}
-article h1 {
-	margin-bottom: .1em;
-	font-size: 1.6em;
-}
-article h1 a {
-	color: #212c2f;
-	-webkit-transition: all 0.25s ease;
-	-moz-transition: all 0.25s ease;
-	transition: all 0.25s ease;
-}
-article h1 a:hover, article h1 a:focus {
-	color: $accent-color;
-}
-article p {
-	margin: 0;
-}
-article blockquote p {
-	padding-left: 1.5em;
-	border-left: 0.25em solid $accent-color;
-	color: #333;
-}
-article .video-large {
-	max-width: 100%;
-	width: auto !important;
-	margin-left: 0 !important;
-}
+  padding-top: 1em;
+  padding-bottom: 2em;
+  max-width: 75em;
+  margin: 0 auto;
 
+  .content {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  footer {
+    margin-top: 1em;
+    text-decoration: none;
+    color: #888;
+  }
+  h1 {
+    margin-bottom: .1em;
+    font-size: 1.6em;
+    a {
+      color: #212c2f;
+      -webkit-transition: all 0.25s ease;
+      -moz-transition: all 0.25s ease;
+      transition: all 0.25s ease;
+      :hover, :focus {
+        color: $accent-color;
+      }
+    }
+  }
+  p {
+    margin: 0;
+  }
+  blockquote p {
+    padding-left: 1.5em;
+    border-left: 0.25em solid $accent-color;
+    color: #333;
+  }
+  .video-large {
+    max-width: 100%;
+    width: auto !important;
+    margin-left: 0 !important;
+  }
+}
 
 @media screen and (min-width: 37.5em) {
-	article {
-		padding-top: 2em;
-		padding-bottom: 3em;
-	}
-	article .content {
-		padding-left: 0;
-		padding-right: 0;
-	}
-	article .content h1,
-	article .content h2,
-	article .content p,
-	article .content ul,
-	article .content ol,
-	article .content dl,
-	article .content figure,
-	article .content pre,
-	article .content embed,
-	article .content object,
-	article .content video,
-	article .content form,
-	article .content footer {
-		width: 60%;
-		margin-left: 20%;
-	}
-	p, li {
-		font-size: 1.125em;
-		line-height: 1.65em;
-	}
-	.wordmark {
-		padding: 0 27px 5px;
-	}
+  article {
+    padding-top: 2em;
+    padding-bottom: 3em;
+  }
+  article .content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  article .content h1,
+  article .content h2,
+  article .content p,
+  article .content ul,
+  article .content ol,
+  article .content dl,
+  article .content figure,
+  article .content pre,
+  article .content embed,
+  article .content object,
+  article .content video,
+  article .content form,
+  article .content footer {
+    width: 60%;
+    margin-left: 20%;
+  }
+  p, li {
+    font-size: 1.125em;
+    line-height: 1.65em;
+  }
+  .wordmark {
+    padding: 0 27px 5px;
+  }
 }
 @media screen and (min-width: 50em) {
-	body {
-		margin: 0.75em 1.5em 1.5em;
-	}
-	article {
-		padding: 3em 0 4em 0;
-	}
-	article .content h1,
-	article .content h2,
-	article .content p,
-	article .content ul,
-	article .content ol,
-	article .content dl,
-	article .content figure,
-	article .content pre,
-	article .content embed,
-	article .content object,
-	article .content video,
-	article .content form,
-	article .content footer {
-		width: 49.375%;
-		margin-left: 28.125%;
-	}
-	article footer {
-		margin-top: 1.2em;
-	}
-	p, li {
-		font-size: 1.1875em;
-	}
+  body {
+    margin: 0.75em 1.5em 1.5em;
+  }
+  article {
+    padding: 3em 0 4em 0;
+  }
+  article .content h1,
+  article .content h2,
+  article .content p,
+  article .content ul,
+  article .content ol,
+  article .content dl,
+  article .content figure,
+  article .content pre,
+  article .content embed,
+  article .content object,
+  article .content video,
+  article .content form,
+  article .content footer {
+    width: 49.375%;
+    margin-left: 28.125%;
+  }
+  article footer {
+    margin-top: 1.2em;
+  }
+  p, li {
+    font-size: 1.1875em;
+  }
 }
 @media screen and (min-width: 56.25em) {
-	article h1 {
-		font-size: 2em;
-	}
+  article h1 {
+    font-size: 2em;
+  }
 }
 @media screen and (min-width: 75em) {
-	p, li {
-		font-size: 1.3125em;
-	}
+  p, li {
+    font-size: 1.3125em;
+  }
 }
 /* UTILITY */
 .small {
@@ -161,98 +162,97 @@ article .video-large {
 }
 
 .quiet {
-	color: rgba(34, 34, 34, .65);
+  color: rgba(34, 34, 34, .65);
 }
 
 h1, .h1 {
-	font: 2.4em/1 $font-sans;
-	font-weight: 700;
-	margin-bottom: 0.1em;
+  font: 2.4em/1 $font-sans;
+  font-weight: 700;
+  margin-bottom: 0.1em;
 }
 h1 a:link, h1 a:visited {
-	text-decoration: none;
+  text-decoration: none;
 }
 h2 {
-	color: #888;
+  color: #888;
 }
 p, li {
-	line-height: 1.5em;
+  line-height: 1.5em;
 }
 blockquote {
-	margin: 0.9em 0 1em 0;
-	font-style: italic;
-	color: #888;
+  margin: 0.9em 0 1em 0;
+  font-style: italic;
+  color: #888;
 }
 article p+p {
-	text-indent: 1.875em;
+  text-indent: 1.875em;
 }
 article p+ul, article p+ol, article p+dl {
-	margin: 1em 0 0.4em 0;
+  margin: 1em 0 0.4em 0;
 }
 .embed-responsive {
-	position: relative;
-	display: block;
-	height: 0;
-	padding-bottom: 56.25%;
-	overflow: hidden;
+  position: relative;
+  display: block;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
 }
 .embed-responsive-4by3 {
-	padding-bottom: 75%;
+  padding-bottom: 75%;
 }
 .embed-responsive .embed-responsive-item,
 .embed-responsive embed,
 .embed-responsive iframe,
 .embed-responsive object,
 .embed-responsive video {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 /* NAV */
 header[role="banner"] {
-	max-width: 75em;
-	margin: 0 auto;
-}
-header[role="banner"] nav {
-	text-align: right;
-	padding-top: 2em;
+  max-width: 75em;
+  margin: 0 auto;
+  nav {
+    text-align: right;
+    padding-top: 2em;
+  }
 }
 .wordmark {
-	background: $accent-color;
-	color: #f5f5f5;
-	font-family: $font-sans;
-	display: block;
-	float: left;
-	padding: 0 24px 5px;
-	text-decoration: none;
+  background: $accent-color;
+  color: #f5f5f5;
+  font-family: $font-sans;
+  display: block;
+  float: left;
+  padding: 0 24px 5px;
+  text-decoration: none;
 }
 .site-links {
-	margin: 0;
-	padding: 0;
-}
-.site-links li {
-	display: inline;
-}
+  margin: 0;
+  padding: 0;
 
-.site-links a:link, .site-links a:visited {
-	color: #888;
-	text-decoration: none;
-	font-size: 1.25em;
-	margin-left: 0.3em;
-	margin-right: 0.3em;
-}
-
-.site-links a.active:link,
-.site-links a.active:visited,
-.site-links a:hover {
-	border-bottom: 4px solid rgb(34, 34, 34);
-	padding-bottom: 2px;
-	color: rgb(34, 34, 34);
+  li {
+    display: inline;
+  }
+  a:link, a:visited {
+    color: #888;
+    text-decoration: none;
+    font-size: 1.25em;
+    margin-left: 0.3em;
+    margin-right: 0.3em;
+  }
+  a.active:link,
+  a.active:visited,
+  a:hover {
+    border-bottom: 4px solid rgb(34, 34, 34);
+    padding-bottom: 2px;
+    color: rgb(34, 34, 34);
+  }
 }
 .site-footer {
 	text-align: center;
