--- a/css/resume.scss
+++ b/css/resume.scss
@@ -39,14 +39,16 @@ ul {
 }
 a { color: #000; font-weight: 600; }
 a:hover, a:focus { color: #000; text-decoration: none; }
+.p-street-address { display: block; }
 .text-center {
 	text-align: center;
 }
-@media screen and (min-width: 20em) {
+@media screen and (min-width: 18em) {
 	h2 { font-size: 2.375em; }
 }
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 27.5em) {
 	h2 { font-size: 2.75em; }
+	.p-street-address { display: inline; }
 }
 @media screen and (min-width: 37.5em) {
 	h2 { font-size: 3.125em; }
